Fix top/upper navigation on mobile devices

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,11 @@
  *= require_self
  */
 
+
+.m-nav {
+  display: none;
+}
+
 body.pattern-white{
   background: url(asset_path('pattern-bg-white.png'));
 }
